Regex fixes. Wrapping long words.

--- a/public/stylesheets/sass/posts.scss
+++ b/public/stylesheets/sass/posts.scss
@@ -7,7 +7,7 @@
     margin-right: 15px;
     margin-bottom: 10px;
   }
-
+  
   img.gravatar
   {
     float: left;
@@ -49,6 +49,7 @@
     {
       margin-left: -$post_margin;
       margin-top: 5px;
+      word-wrap: break-word;
       
       img
       {
